pinj-bird added

--- a/views/404.html
+++ b/views/404.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<% include ../layouts/header.ejs %>
+    <div id="app">
+       <div>
+           <p>Возможно страница, которую вы ищете была удалена или не существует.</p>
+       </div>
+    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Страница не найдена</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-    <h1>#404. Страница не найдена</h1>
-    <a href="/">На главную</a>
-</body>
-
-</html>
+    <script src="client.js" type="module"></script>
+<% include ../layouts/footer.ejs %>
