--- a/views/register.html
+++ b/views/register.html
@@ -1,28 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Регистрация - NodeServCliSkeleton</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body data-page-name="register">
-    <nav class="menu">
-        <ul>
-            <li><a href="/">Главная страница</a></li>
-            <li><a href="/register">Регистрация</a></li>
-            <li><a href="/login">Авторизация</a></li>
-        </ul>
-    </nav>
-    <h1>Регистрация</h1>
+<% include ../layouts/header.ejs %>
     <div id="app">
-        <% if(errors){ %>
-        <p class="error-msg <%= !success?'bad':'success'%>">
-            <%= errors %>
-        </p>
-        <% } %>
         <form action="/register" method="post">
             <div class="container">
                 <label for="login"><b>Логин</b></label>
@@ -36,7 +16,6 @@
             </div>
         </form>
     </div>
-    <script src="client.js"></script>
-</body>
 
-</html>
+    <script src="client.js" type="module"></script>
+<% include ../layouts/footer.ejs %>
